quick fix overlapping sidebar-filter

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -146,6 +146,7 @@
 	right: -200%;
 	top: 0;
 	height: 100vh;
+	width: auto;
 	overflow-y: auto;
 	background: #f3f3f3;
 	z-index: 10;
@@ -154,6 +155,7 @@
 
 	&--open {
 		right: 0;
+		z-index: 100;
 	}
 
 	&__option {
